infra/k8s/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bff-api
  labels:
    app.kubernetes.io/name: api
    app.kubernetes.io/part-of: bff
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: api
      app.kubernetes.io/part-of: bff
  template:
    metadata:
      labels:
        app.kubernetes.io/name: api
        app.kubernetes.io/part-of: bff
    spec:
      serviceAccountName: bff-api
      containers:
        - name: api
          image: ghcr.io/strideynet/bsky-furry-feed/bffsrv:e9c931fbbe9966d809433a6ba36ce1b879f11538
          ports:
            - containerPort: 1337
            - containerPort: 1338
              name: debug
          resources:
            requests:
              memory: 512Mi # 512Mi is minimum
              cpu: 250m # 250m is minimum
---
apiVersion: v1
kind: Service
metadata:
  name: bff-api
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 1337
  selector:
    app.kubernetes.io/name: api
    app.kubernetes.io/part-of: bff
  type: ClusterIP
