infra/k8s/ingester.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bff-ingester
  labels:
    app.kubernetes.io/name: ingester
    app.kubernetes.io/part-of: bff
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: ingester
      app.kubernetes.io/part-of: bff
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ingester
        app.kubernetes.io/part-of: bff
    spec:
      serviceAccountName: bff-ingester
      containers:
      - name: ingester
        image: ghcr.io/strideynet/bsky-furry-feed/bffsrv:612ed96842f78c9fb74a1b86fec1be42d68940f2
        ports:
        - containerPort: 1337
        - containerPort: 1338
          name: debug
        resources:
          requests:
            memory: 512Mi # Minimum for GKE autopilot
            cpu: 500m
---
apiVersion: v1
kind: Service
metadata:
  name: bff-ingester
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 1337
  selector:
    app.kubernetes.io/name: ingester
    app.kubernetes.io/part-of: bff
  type: ClusterIP
