infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bff
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "ingress"
    networking.gke.io/managed-certificates: "bff"
spec:
  defaultBackend:
    service:
      name: bff-ingester
      port:
        number: 80
